--- a/docs/style.css
+++ b/docs/style.css
@@ -185,7 +185,7 @@ footer{
 	padding-top: 100px;
 	box-sizing: border-box;
 	text-align: center;
-	margin-left: 750px;
+	margin: auto;
 	margin-bottom: 40px;
 }
 
